--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-    index.html
+
+<!DOCTYPE html>
+  <head>
+    <meta charset="utf-8">
+    <title>"My First Web page!"</title>
+  </head>
+  <body>
+    <p>Hello, world!</p>
+  </body>
+</html>
